--- a/算法/数组排序.md
+++ b/算法/数组排序.md
@@ -1,607 +1,218 @@
-表单开发是前端同学绕不开的一个话题，特别是在一些管理系统中，表单开发是前端同学的一个主要工作，占用了大部分开发时间，然而很多糟糕的代码也都出现在表单相关工作中，很多表单的可读性、可维护性很差，更别提复用性了，如何优雅地进行表单开发，是提升前端代码质量的重要一环，今天我们就一起探讨下表单开发中的各种常见问题及解决方案。
-
-什么是表单组件
-=======
-
-在讨论表单存在的问题之前，我们先搞明白一个概念，什么是表单组件？很多工作多年的同学，可能都无法说清楚什么是表单组件，这就导致在开发表单组件时弄出一些不伦不类的东西。
-
-比如下面这种，有一个自定义表单组件MyFormItem，它有一个属性data接收表单数据formData，并在组件内部对formData进行修改，你觉得有什么问题吗？
-
-    <template>
-        <el-form>
-            <el-form-item>
-                <MyFormItem :data="formData"/>
-            </el-form-item>
-        </el-form>
-    </template>
-    <script>
-    export default {
-        data(){
-            return {
-                formData:{
-                    name: '',
-                    age: 18
-                }
-            }
-        }
-    }
-    </script>
-    
-
-这就是一个常见的表单组件开发反例，首先表单组件MyFormItem的值不应该命名为'data'，而应该统一命名为'value'；其次这个表单组件肯定会在内部直接修改formData，这不符合组件开发的规范，即组件不应该直接修改props，且我们不知道组件内部会对formData进行怎样的修改，必须深入到内部实现才能知道。
-
-表单组件是有固定的开发范式的，具体可以分为受控组件和非受控组件两种。
-
-受控组件
-----
-
-所谓受控组件，就是组件的内部状态可以通过修改属性值的方式进行控制，受控组件必须满足以下2个条件：
-
-*   存在一个名为value的属性
-    *   组件的初始值由value属性值决定
-    *   value属性值变化后组件的内部状态也必须跟着变化
-*   组件对外抛出onChange事件
-    *   组件内部状态变化后，以抛出onChange事件的方式将表单项的最新值传递给父组件
-
-简单来说，受控组件必须有value属性和onChange事件，且value变化会导致组件数据更新。这样组件的行为就能够被使用方完全控制，所以称为受控组件。
-
-以下图这样一个重量表单组件为例，我们来演示下如何开发一个受控组件。
-
-![shoukong.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/787395c3ff0b4d749c2be824c91b5b17~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=416&h=183&s=9694&e=png&b=fefefe)
-
-期望该重量组件的数据形式为'重量+单位'，如'10g'，是一个字符串。该组件在接收到外部数据后，能够从字符串中提取出重量值和单位，分别赋给input输入框和select选择组件，每当input和select值发生变更，都会将input的值和select的值组合成字符串抛出。
-
-    <template>
-        <div>
-            <el-input-number :value="number" @change="numberChange"/>
-            <el-select :value="unit" @change="unitChange">
-                <el-option label="克" value="g" />
-                <el-option label="千克" value="kg" />
-                <el-option label="吨" value="t" />
-            </el-select>
-        </div>
-    </template>
-    
-    <script>
-    export default {
-        name: "WeightFormItem",
-        model: {
-            event: 'change'
-        },
-        props: {
-            value: {
-                type: String,
-                default: ''
-            }
-        },
-        computed: {
-            //重量数值部分
-            number(){
-                let number = parseFloat(this.value)
-                return isNaN(number) ? undefined : number;
-            },
-            //重量单位部分
-            unit(){
-                let match = (this.value || '').match(/[a-z]+/)
-                if(match){
-                    return match[0];
-                }
-                return 'g'
-            }
-        },
-        methods:{
-            numberChange(number){
-                this.$emit('change', `${typeof number === "undefined" ? '' : number}${this.unit}`)
-            },
-            unitChange(unit){
-                this.$emit('change', `${typeof this.number === "undefined" ? '' : this.number}${unit}`)
-            }
-        }
-    };
-    </script>
-    
-
-在上述实现中，我们通过计算属性，将value的变化传递给el-input-number和el-select组件，而省去了监听（watch）value变化的过程，通过这种方式让组件可以随着外部value的变化而变化；同时组件内部因为用户操作导致的变化，也及时通过change事件抛给父组件（Vue中通常不使用onChange，而是change）。
-
-在Vue中，受控组件的使用非常简单，只要通过v-model双向绑定数据即可，大大简化了表单的处理逻辑。
-
-     <WeightFormItem v-model="weight"/>
-    
-
-非受控组件
+什么是组件
 -----
 
-和受控组件对应的是非受控组件，即组件的内部状态由组件自身进行维护，而不是受到外部传递过来的props控制，一般来说，非受控组件应该满足以下2个条件：
+组件（Component）是指一种可重用的UI+逻辑代码块，用于描述用户界面中的一个部分。组件可以包含HTML、CSS和JavaScript代码，可以被重复使用，可以根据需要进行组合和嵌套，从而构建复杂的用户界面。
 
-*   对外提供一个名为defaultValue的属性
-    *   组件的初始状态由defaultValue决定
-    *   后续组件的状态随着用户交互而进行变化，但不通知父组件
-*   对外提供一个可以获取组件内部状态的方法
-    *   一般通过ref方式访问组件的内部状态value，如$refs.\*\*\*.value（不建议直接访问组件内部状态）
-    *   建议提供一个method方法获取内部状态，如getValue()
+> 组件 = UI + 逻辑
 
-在上述受控组件示例中，我们封装了一个重量表单组件，接下来用非受控方式来实现该组件：
+随着前端三大框架（React、Vue、Angular）的发展，如今Web页面的开发，已经完全变成了组件的开发，页面由一个一个的组件构成，组件就像是一个一个小的积木块，通过各种组合连接，最终搭建成一个庞大的项目。
 
+![06-项目-页面-组件-子组件.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/777a219149d14d74b508e9dbc87e02ca~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=512&h=441&s=49879&e=png&b=fefefe)
+
+组件化开发源于分治的思想，在面对复杂的任务时，分而治之是一种行之有效的解决问题方式，将庞大的复杂的系统，拆分成一个个单一的简单的可完成的小任务，然后逐个击破，随着小任务一个一个的完成，最终完成一个之前看起来很难或者不可能完成的大任务。
+
+分治思想是一直存在的，所以组件化开发也并不是现在才有的，只是由于三大框架提供了非常优秀的组件开发范式，降低了组件开发的难度，让组件化开发得以普及。还记得几年前用Sea.js+jQuery开发前端组件时真的感觉很吃力，不仅封装组件很困难，使用组件也没有现在简单，虽然也能做，但是难度确实比现在大多了，而且组件的颗粒度也不容易做的太细。
+
+感恩前端框架的发展，在现在的前端页面开发中，大到一个页面，小到一个icon，一切皆组件，可以说如果你不会封装组件，你就不是一个合格的前端工程师。
+
+为什么要进行组件化开发
+-----------
+
+组件化开发能给我们带来很多收益，不仅体现在技术层面，而且对我们的工作流程都有很深的影响。
+
+### 技术层面收益
+
+1.  分离关注点，提升了代码的可读性
+
+组件开发要求我们必须对页面结构进行抽象，看到一个页面就要思考这个页面应该拆分为几个模块，而不是在一段代码中平铺所有的细节，以一个官网页面为例。
+
+没有进行组件化开发时，页面代码是这样的：
+
+    <div>
+        <div class="header">
+            <img src="logo.png"/>
+            <h1>网站名称</h1>
+            <!--  其他头部代码    -->
+        </div>
+        <div class="main-content">
+            <div class="banner">
+                <ul>
+                    <li><img src="banner1.png"></li>
+                    <!--   省略n行代码      -->
+                </ul>
+            </div>
+            <div class="about-us">
+                <!--   省略n行代码      -->
+            </div>
+            <!--   省略n行代码      -->
+        </div>
+    </div>
+    
+
+你很难一眼说清楚这个页面到底包含几部分内容，如果"关于我们"部分有段内容要修改，你可能需要滚动鼠标滚轮来回查找，你必须阅读大量和"关于我们"无关的代码，才有可能定位到你要修改的内容在哪，很容易迷失在细节的海洋里。
+
+通过组件化开发重构后：
+
+    <div>
+        <Header/>
+        <main>
+            <Banner/>
+            <AboutUs/>
+            <Services/>
+            <ContactUs/>
+        </main>
+        <Footer/>
+    </div>
+    
+
+可以看出，页面结构非常清晰，想要修改"关于我们"的内容，直接进入AboutUs组件即可，不需要再去关注那些和本次目标无关的内容，让你的关注点局限在特定的组件内部，增删改查某个模块都变得异常简单，代码可读性大大增强，维护难度大大降低。
+
+2.  提升复用性
+
+组件抽取的一个重要目的就是为了消除重复，消除重复带来两个重大收益：提升开发效率、降低维护成本。提升开发效率很好理解，不需要重复造轮子了，拿来就用；降低维护成本主要是当需求变更时，只需修改组件一处即可，不需要四处修改。
+
+3.  UI更一致
+
+在多个前端同学进行协作时，如果没有一套公共组件，每个人做出来的页面风格可能差别很大，就算有UI规范，也不能保证每个人都能严格遵守，比如一个简单的标题，可能每个人设置的字体大小、颜色、padding、margin都不能保证完全一致，通过组件化，可以将规范通过组件进行实现，开发人员只需要使用组件即可，不用记忆繁琐的规范。
+
+    <!-- 不同级别的表单标题 -->
+    <FormTitle :level="1"/>
+    <FormTitle :level="2"/>
+    
+
+组件化是推动UI规范的重要载体，繁琐的规范是没有人能够记住的，也没有必要去记住那么多细节。
+
+4.  提升可测试性
+
+每个组件都有自己的职责和功能，可以被清晰地定义和实现，从而可以容易地进行测试，相较于复杂的大页面，组件的测试相对更加简单纯粹。
+
+### 工作流程层面收益
+
+组件化开发不只对Code有帮助，对工作流程也有很大的影响。
+
+1.  方便多人协作
+
+曾经做过一个低代码大屏编辑器，当时由7个前端同学共同开发完成，在开发之前，我先将低代码编辑器功能拆分为多个子组件，包括工具栏、物料选择、绘制区域、属性编辑等，接着制订好各组件之间的通信方式及需要共享的数据，最后小组每个成员分别负责一个组件的开发，最终在很短的时间内完成了一个技术含量相对较高的项目开发。
+
+如果没有组件化这种开发方式，就算给我再多的人，我也没法合理的安排他们的工作，也没法集中团队力量办大事。
+
+     <!--一个低代码编辑器拆分成多个子组件-->
+     <!--子组件还可以继续进行拆分-->
     <template>
         <div>
-            <el-input-number v-model="number"/>
-            <el-select v-model="unit">
-                <el-option label="克" value="g" />
-                <el-option label="千克" value="kg" />
-                <el-option label="吨" value="t" />
-            </el-select>
+            <!--顶部工具栏-->
+            <ToolBar/>
+            <main>
+                <!--物料选择-->
+                <MaterialSelect />
+                <!--绘图区域-->
+                <DrawingArea/>
+                <!--属性编辑-->
+                <PropertyEditing/>
+            </main>
         </div>
     </template>
     
-    <script>
-    export default {
-        name: "WeightFormItem",
-        props: {
-            defaultValue: {
-                type: String,
-                default: ''
-            }
-        },
-        data(){
-            //根据初始化计算重量数值
-            let number = parseFloat(this.defaultValue)
-            if(isNaN(number)){
-                number = undefined
-            }
-    
-            //根据初始化计算重量单位
-            let match = (this.defaultValue || '').match(/[a-z]+/)
-            let unit = match &&  match[0]
-    
-          return {
-              number,
-              unit
-          }
-        },
-        methods:{
-            getValue(){
-                return  `${typeof this.number === "undefined" ? '' : this.number}${this.unit}`
-            }
-        }
-    };
-    </script>
-    
 
-通过非受控组件方式开发的重量表单组件，内部维护了两个状态number和unit，它们的初始值由属性defaultValue的值决定，后续number和unit的值只会受到用户交互影响，不再由外部进行控制。
+2.  前端人才结构分层
 
-再来看看非受控组件的使用：
+每个前端团队都应该努力构建自己的组件库，组件库不只是提高了团队研发效率，更重要的是它降低了前端开发门槛，对团队成员的要求降低了。
 
-    <template>
-      <WeightFormItem ref="weight" :default-value="weight"/>
-    </template>
-    <script>
-    export default {
-        data(){
-            return {
-              weight: '10kg'
-            }
-        },
-        methods:{
-            submit(){
-                console.log(this.$refs.weight.getValue());
-            }
-        }
-    }
-    </script>
-    
+没有组件库时，要想获得较好的开发质量，每个人必须能独当一面，每个人都要有较高的研发水平，这就意味着团队研发成本上升。如果团队成员技术水平参差不齐，那么很容易发生代码质量参差不齐的情况，组件库能很好地解决这个问题，有了一个高质量的团队组件库，哪怕是一个实习生进来，也能很快进行高质量的产出。
 
-只能通过ref的方式获取组件的表单值。
+组件库让整个团队的结构发生了变化，可以由1-2个老手带领几个新手来完成研发工作，而不必每个人都具有很高的技术水平。
 
-在日常业务开发中，建议尽量采用**受控组件**的方式去开发表单组件，一般来说受控组件的使用更加简单，而且因为受控，给了父组件足够的灵活性，可以满足各种场景。比如一个编辑用户信息的表单，首次挂载时，通常会给表单设置默认数据，而后会请求API接口获取用户的信息并赋值给表单，如果表单组件不可控，那么此时就无法正确渲染用户信息了。
+组件化开发深刻影响了前端团队的人员结构。
 
-当然了，非受控组件也有它的优势，像Ant Design组件库中的表单组件，通常都同时支持受控组件和非受控组件两种方式，但这无疑会增加组件的开发复杂度，对于业务中的表单组件开发，采用受控组件方式就足够了。
-
-表单开发常见问题及解决方案
-=============
-
-问题1：充满细节
+何时进行组件抽取
 --------
 
-表单本身具有很高的复杂性，它包含了数据、UI和逻辑，如果没有合理的设计，很容易变的混乱。
+组件化开发很好，那何时需要抽取组件呢，我觉得可以从以下4个角度来考虑：
 
-在我多年的工作中，发现表单开发最大的问题就是**充满细节**，一个表单通常会包含多个表单项，而每个表单项一般也都会有不少的业务逻辑，如果将所有的表单项逻辑聚集在一个文件中，就会因为过多的细节而导致看不清整个表单的脉络，从而降低了代码的可读性和可维护性。
+*   复用性
 
-比如一个商品管理表单，里面包含商品名称、商品图片、商品分类、sku等多个表单项。
+如果一个功能在多个页面都有使用，或者可以预期在后续会被重复使用，那么就可以把它抽取为组件。
 
-![shangpin.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/0bbdb27abf7343a694063a2e79e08296~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=409&h=392&s=31175&e=png&b=fdfdfd)
+更多的时候，刚开始没有意识到或者没必要将一个功能抽取为组件，但在后续的需求开发当中，发现需要复用这个功能，那么请先花点时间将它抽取成一个组件，然后再进行新代码的编写，这也是比较推崇的一个工作方式，先重构旧代码再开发新需求。
 
-如果将这些表单项的具体实现都放在一个文件中，则很难看清整个表单的工作流程：如何初始化数据、如何双向绑定每个表单项的值、如何提交数据。取而代之的是各种细节：商品图片上传前校验、调用接口上传图片、如何增加/删除一张图片；调用某个接口获取商品分类列表数据，然后再渲染一个商品分类下拉选择框；如何添加/移除一种sku等。这些细节很容易把人搞得晕头转向。
+*   复杂度
 
-这里就不用代码演示了，没有几百行根本展示不下，相信大家都能体会到，而且确实有很多同学在开发表单时，喜欢将每个表单项的实现细节都放到整个表单组件中。 这会带来以下几种问题：
+如果一个组件的复杂度较高，那么它可能需要被拆分成多个小的、可重用的组件，以便更好地管理和维护，根据个人多年的开发经验，单个文件代码行数最好不超过300行，行数太多会给代码的可读性带来严重的障碍，我相信没有一个人喜欢阅读动辄成千上万行的单文件代码，那我们有什么理由去写这样的代码呢？如果你发现一个文件代码行数超过300行甚至达到了千行以上，那么是时候进行组件拆分了。
 
-*   **表单项实现逻辑分散**：
+*   结构化编程
 
-一个表单项的实现代码分散在多个地方：Dom、JS、Style，很难搞明白一个表单项的完整逻辑，不符合高内聚的编程原则，比如上面这个商品分类下拉选择框，它的渲染逻辑藏在template中，它还涉及data中的categoryOptions，它获取下拉选项的逻辑藏在methods中的getCategoryOptions方法中，如果这个页面有几百行，那么你就必须来回查找才能看得懂它的完整逻辑，因为它们太分散了。
+就像前面我们说到的一个品牌官网的开发，并不一定是因为页面代码行数太多去拆它，也不是为了复用去拆分它，而是单纯地不想在一个页面中展示太多细节。我们想要看清楚功能的主结构，所以将一个官网页面分成banner轮播、产品服务、关于我们、联系我们等几个大模块，然后再分别去实现这几个子组件。
+
+这就像我们平时演示PPT一样，先告诉大家今天我要讲哪几部分内容，然后再展开说说各部分的细节，而不是一上来就说一大堆细节，让人不知道你究竟想要表达什么。
+
+*   分离关注点
+
+一个组件应该有它的重点任务，在别人阅读你的组件实现时，不应该用一些非主线的代码把他的关注点吸引走。
+
+比如我在进行一个添加用户组件的开发，其中有个表单项是用户所在地区（级联选择省市区），如果我不把用户所在地区抽成一个组件单独开发，那么我这个添加用户组件内大部分代码可能都是关于如何实现地区级联选择的，但这是我这个添加用户组件的核心吗？
+
+作为一个添加用户组件，主要关心的应该是如何初始化表单数据、配置表单校验规则以及提交表单数据这样的事情，而不是去关心其中一个表单项怎么去实现，如果在这个页面中混杂太多的表单项的实现，就扰乱了阅读者的关注点，给代码阅读增加障碍，影响可读性。
+
+如何写出好组件
+-------
+
+如何评价一个组件的好坏呢？我觉的可以站在组件使用者和维护者两种角色的角度去考虑。
+
+对于使用者来说，一个好的组件应该具备**通用性强**和**易用性好**这两个核心特性。
+
+通用性强，意味着组件能在很多场景中发挥作用，可以在项目中大量使用，也就是复用性要好；而且就算面对一些特殊场景，也可以通过简单的扩展来满足特殊需求，即可扩展性要好。
+
+> 通用性 = 复用性 + 扩展性
+
+易用性好，意味着使用起来非常简单，即使不进行配置，或者只需要进行简单的配置就能让组件满足大部分使用场景，哪怕是一个新手，都能很快掌握组件的使用方法。
+
+对于组件的维护者来说， 一个好的组件应该具备较好的**可读性**与**正交性**。
+
+可读性好，意味着组件内部结构清晰，特别是内部的数据流转要清晰可见。
+
+正交性好（低耦合），意味着组件的耦合少，组件的实现尽量不要和外部（父组件、数据仓库、url参数等）产生太多耦合，也不要和子组件过度耦合。
+
+> 好组件评价指标 = 复用性 + 扩展性 + 易用性 + 可读性 + 正交性
+
+如何提升组件的这几个指标，有一些具体的方法，下面我一起来学习下。
+
+### 提升复用性
+
+提升组件复用性有两个重要的方法：第一个是对业务进行抽象，找出多个业务模块的共性；第二个是组件开发要遵循单一职责原则。
+
+*   **用抽象代替具体**
+
+在开发某个功能页面时，不能只是针对当前要开发的功能需求进行组件抽取，而是要跳出来，从整个系统的角度去考虑，有没有相似的使用场景，然后站在更高的维度去抽取组件，学会使用抽象思维，而不是针对具体业务具体场景去设计组件。
+
+记住，越抽象复用性就越强，越具体复用性就越差。
+
+我们来举个例子，假设在用户列表的上面有个搜索区域，可以通过输入姓名和手机号进行搜索，如下图：
+
+![06-搜索组件示例.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/a6edef6f0f8942d891742d7e65d8d6ca~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=614&h=110&s=13260&e=png&b=fefefe)
+
+现在我们想把搜索这块封装成一个组件，如果只针对这个场景去封装，我们把这个组件命名为UserSearch，最终组件大致是这样的（以vue2组件开发为例，简化了实现）。
 
     <template>
-    <!--省略其他代码-->
-    <el-form-item>
-        <el-select v-model="formData.category">
-            <el-option v-for="item in categoryOptions"
-                :key="item"
-                :label="item"
-                :value="item"
-            ></el-option>
-        </el-select>
-    </el-form-item>
+        <div>
+            <input v-model="name" placeholder="输入姓名筛选"/>
+            <input v-model="phone" placeholder="输入手机号筛选"/>
+            <button @click="emitSearch">搜索</button>
+        </div>
     </template>
-    
     <script>
     export default {
+        name: 'UserSearch',
         data(){
             return {
-                //省略其他数据
-                formData:{
-                    category: ''
-                },
-                categoryOptions:[]
+                name: '',
+                phone: ''
             }
         },
         methods:{
-           //省略其他method
-           getCategoryOptions(){
-               //获取商品分类的选项
-           }
-        }
-      
-    }
-    
-    <script>
-    
-
-*   **表单项无法在多个表单中复用**
-
-由于没有抽取单独的表单项组件，从而无法在其他表单中复用，只能每次都重新开发一遍。
-
-有的很复杂的表单项大家容易想到提取出来，但是针对一些不那么复杂的，往往就忽视了，比如上面的商品分类，它的实现没有那么复杂，只是要调用接口获取商品分类列表，然后渲染一个下拉选择框，但是如果一个表单中有几个这样的组件，也会让整个表单变的混乱，而且多个表单中都实现这样一套逻辑，也增加了工作量和后期维护难度，建议也把这种作为一个表单项组件提取出来。
-
-*   **表单文件行数过大**
-
-不进行表单项组件抽取，面向细节开发表单，很容易造成一个表单组件达到数千行，甚至上万行，很多垃圾代码都出现在表单中。
-
-*   **掩盖了表单核心逻辑**
-
-细节过多，导致本末倒置，无法看清表单的核心逻辑。
-
-最终，因为这种堆砌细节的实现方式，导致表单代码经常难以维护，复用性也很差，每次开发表单都是从头开始。
-
-解决方式也非常简单，就是将表单项提取出来，作为一个单独的组件，一个表单应该由多个表单项组件构成。
-
-![form-item.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/90f406a7bf7e4f7e91ccb3caf2677b80~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=424&h=289&s=19859&e=png&b=fefefe)
-
-上述商品管理表单，通过封装表单项方式可能的代码实现如下：
-
-    <template>
-      <el-form :model="formData">
-        <form-item label="商品名称" prop="name">
-          <el-input v-model="formData.name"/>
-        </form-item>
-        <form-item label="商品图片" prop="pics">
-          <ProductPicsFormItem v-model="formData.pics"/>
-        </form-item>
-        <form-item label="商品分类" prop="category">
-          <ProductCategoryFormItem v-model="formData.category"/>
-        </form-item>
-        <form-item label="sku" prop="sku">
-          <ProductSkuFormItem v-model="formData.sku"/>
-        </form-item>
-      </el-form>
-    </template>
-    <script>
-    export default {
-      data() {
-        return {
-          formData: {
-            name: '',
-            pics: [],
-            category: '',
-            sku: []
-          }
-        }
-      },
-      mounted() {
-        if (this.$route.params.id) {
-          //编辑，获取商品数据
-          productService.getDetail(this.$route.params.id).then((res) => {
-            this.formData = res
-          })
-        }
-      },
-      methods: {
-        submit() {
-          //提交表单数据
-        }
-      }
-    }
-    </script>
-    
-
-可以看出，通过这种方式开发的表单，代码非常简洁，逻辑也非常清晰。如果某个表单项出问题了，只需要进入相应的表单项组件进行修改即可，可维护性大大增强；而且提取的表单项组件还可以用到其他表单，复用性也大大增强；即使没有任何复用场景，通过提取表单项组件也简化了主表单的开发逻辑，可读性大大增强。
-
-问题2：繁琐的Dom
-----------
-
-这里提到的繁琐的Dom其实也是一种细节，但是和上面提到的"充满细节"侧重点有所不同。上面讲到的细节主要是指因为表单项本身很复杂，把很复杂的实现过程都放到表单中，导致产生了过多的实现细节；而这里说的繁琐的Dom是指表单项本身并不是很复杂，但是有非常多的属性配置，导致产生了很多繁琐的Dom。
-
-看下下面这个示例：
-
-    
-    <template>
-      <el-form
-          :model="formData"
-          size="mini"
-          label-width="100px"
-      >
-        <el-form-item
-            prop="name"
-            label="名称"
-        >
-          <el-input
-              v-model="formData.name"
-              placeholder="请填写名称"
-              minlength="2"
-              maxlength="30"
-              clearable
-          />
-        </el-form-item>
-        <el-form-item
-            prop="tag"
-            label="标签"
-        >
-          <el-select
-              v-model="formData.tag"
-              class="w-100"
-              multiple
-              filterable
-              allow-create
-              default-first-option
-              placeholder="请选择或输入标签"
-              @visible-change="$event && getTags()"
-          >
-            <el-option
-                v-for="(item, index) in tagOptions"
-                :key="index"
-                :label="item"
-                :value="item"
-            />
-          </el-select>
-        </el-form-item>
-      </el-form>
-    </template>
-    
-
-仅仅只是2个表单项，Dom就有30来行代码，而随着表单项的增多，代码行数也会越来越多，每次看到这样繁琐的Dom都感觉头大，根本无法看清整个表单的结构，特别是下拉选择类组件，还要考虑如何渲染option，总感觉这样的Dom结构非常的啰嗦，期望能够通过数据来驱动Form表单的渲染。
-
-对此，也有很多库做过尝试，比如通过配置表单的方式驱动页面渲染：
-
-    <template>
-      <config-form 
-          :model="formData"
-          :fields="fields"
-      />
-    </template>
-    <script>
-    export default {
-      data() {
-        return {
-          formData: {},
-          fields: {
-              name: {
-                  label: '名称',
-                  component: 'input',
-                  componentProps: {
-                    placeholder: '请填写名称',
-                    minlength: 2,
-                    maxlength: 30,
-                    clearable: true
-                  },
-                  rules: [{required: true}]
-              },
-              tag: {
-                  label: '标签',
-                  component: 'select',
-                  componentProps: {
-                      className: 'w-100',
-                      multiple: true,
-                      filterable: true,
-                      allowCreate: true,
-                      defaultFirstOption: true,
-                      placeholder: '请选择或输入标签',
-                      options: this.getTags,
-                  },
-                  rules: [{required: true}]
-              }
-          }
-        }
-      }
-    }
-    </script>
-    
-
-通过这种方式大大简化了表单的Dom结构，以更紧凑的JS对象的方式来描述表单结构，通过数据驱动表单的生成。同时也可以将**表单项的校验规则rules和表单项的其他配置放置在一起，让每个表单项的配置更加高内聚**，如果你想修改某个表单项，就只需要关注它对应的JS对象即可，不需要像之前一样在Dom和JS之间来回切换。
-
-使用配置表单方式也面临一些挑战，比如我们想实现在"名称输入框"后面加一个图标，就很难通过配置来实现，最好搭配插槽支持一些特殊表单项的实现。
-
-    <template>
-      <config-form  
-        :model="formData"
-        :fields="fields"
-      >
-        <!--通过插槽扩展某个表单项的label-->
-        <template slot="name-label">
-          <span style="color:red;">姓名</span>
-        </template>
-        <!--通过插槽扩展某个表单项的表单部分-->
-        <template slot="name">
-          <div>
-            <el-input v-model="formData.name"/>
-            <i class="el-icon-question"></i>
-          </div>
-        </template>
-      </config-form>
-    </template>
-    
-
-通过这种方式，增强了配置表单对特殊表单样式的支持。然而对于一些特殊布局，配置表单显得很麻烦，比如我们想实现第一行放置一个表单元素，第二行放置两个表单元素，配置表单就显得很棘手，同样地，我们也可以通过插槽形式来支持自定义表单布局，而具体每个表单项如何渲染，仍然由配置决定。
-
-    <template>
-      <config-form  
-        :model="formData"
-        :fields="fields"
-      >
-        <template slot="layout">
-          <el-row>
-            <el-col :span="24">
-              <!-- 如何渲染由配置决定，这里相当于一个占位符 -->
-              <config-form-item prop="name"/>
-            </el-col>
-          </el-row>
-          <el-row>
-            <el-col :span="12">
-              <config-form-item prop="age"/>
-            </el-col>
-            <el-col :span="12">
-              <config-form-item prop="address"/>
-            </el-col>
-          </el-row>
-        </template>
-      </config-form>
-    </template>
-    <script>
-    export default {
-        data(){
-            return {
-              formData:{},
-              fields: {
-                  name: {
-                      label: '名称',
-                      component: 'input',
-                  },
-                  age: {
-                      label: '年龄',
-                      component: 'number',
-                  },
-                  address: {
-                      label: '地址',
-                      component: 'textarea',
-                  }
-              }
-            }
-        }
-    }
-    </script>
-    
-
-针对配置表单，可以参考我封装的ConfigForm库，[github](https://github.com/501351981/config-form "https://github.com/501351981/config-form")，当然了，配置表单也并不是特别完美解决这个问题，这里也只是尝试给出一种方案，抛砖引玉。
-
-问题3：表单项组件封装不规范
---------------
-
-在本文最开始我们就讨论了受控组件和非受控组件，二者都有固定的开发范式：**受控组件要求必填提供value属性和onChange事件，非受控组件需要提供defaultValue和getValue方法**，而很多同学没有严格按照这种方式进行封装，导致可读性较差，耦合较深。
-
-比如上面提到的选择分类的表单项组件CategoryFormItem，如果没有按照受控组件的规范进行开发，而是接收整个表单数据formData作为属性data的值。
-
-    <template>
-        <el-form>
-            <el-form-item name="category">
-                <CategoryFormItem :data="formData"/>
-            </el-form-item>
-        </el-form>
-    </template>
-    
-
-在CategoryFormItem中，必然需要通过formData.category来获取/设置分类数据，这就造成了耦合。如果在表单中不再使用formData.category存储分类数据，而是改成了formData.group，那么表单项组件CategoryFormItem就必须跟着修改，这不就是耦合嘛。而如果采用受控组件形式，则不需要任何变化；其次这种方式可读性也较差，你不知道CategoryFormItem内部都更改了formData的哪些值。
-
-所以，**只要封装表单项组件，就严格遵守受控组件和非受控组件的规范**。
-
-问题4：校验规则不统一
------------
-
-在表单开发中，还有一个常见的小问题，就是某个表单项的校验规则可能不统一，比如业务中"用户名"有固定要求：以字母开头，长度不能超过30个字符。但是在多个表单中都可能输入用户名，很容易发生多个表单中校验不一致的问题，因此可以把相同业务的校验规则整理到一个常量中进行引用。
-
-    // /const/validate.js
-    
-    export const UserNameValidate = [
-        {
-            pattern: /^[a-zA-Z]\w{0,29}$/, 
-            message: '用户名必须以字母开头，只能包含字母数组和下划线，不超过30个字符'
-        }
-    ]
-    
-    
-
-这样确保了校验规则的一致性，后期校验规则变化改起来也非常简单，避免产生遗漏。
-
-不过要注意，**只有相同业务才应该复用校验规则，不同业务，即使校验规则相同，也应该拆成两个**，比如用户名和产品名刚开始可能遵循相同的校验规则，但是它们就不应该复用同一个校验规则，因为分属不同的业务，产品名规则变化不一定会引起用户名规则的变化，而如果之前将它们复用了同一个校验规则，则维护起来就非常麻烦，这时候应该牺牲复用性而降低耦合。
-
-复杂业务表单的开发
-=========
-
-在表单开发中，比较麻烦的是复杂业务表单的开发，它们常常有几十甚至上百个字段需要编辑，如果把所有内容放到一个表单中，势必导致这个表单的逻辑非常复杂，文件大小也会非常大，这也是我们经常看到的万行代码的高发地。
-
-针对复杂业务，通常我们可以利用分治思想来解决。将一个大型任务分解成多个小任务，小任务是很容易解决的，解决后再通过聚合多个小任务的结果，最终完成大型任务的开发。复杂业务的表单开发同样可以借用这样的思想和方法。
-
-比如现在有个非常复杂的表单，其中基本信息和详细信息都有很多表单项。
-
-![big-form.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/05f249eafa5f45359ff879e0c284f80a~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=671&h=364&s=18535&e=png&b=fefefe)
-
-我们可以将整个表单具体实现拆成2个子表单：基本信息表单BaseForm和详细信息表单DetailForm，每个表单各自管理各自的表单项配置及表单校验，在主表单提交时，可以分别调用两个子表单的校验方法validate，如果全部校验通过，则拿到各自表单的数据，然后调用API传递给后端。
-
-这个思路比较好理解，但是在实现中我们还要考虑主子表单的数据流转问题，这里可以参考前面提到的受控组件和非受控组件规范。这里一个子表单可以看做是一个受控或非受控组件，如果子表单是非受控组件，那么它应该提供一个名为defaultValue的属性来接受子表单初始化数据；如果子表单是受控组件，那么它应该支持value和onChange事件，可以支持Vue的v-model双向绑定；不管子表单是受控组件还是非受控组件，都应该提供一个名为validate的方法，供主表单调用，以进行表单校验。
-
-接下来我们通过两种方式来实现这个复杂表单。
-
-非受控组件方式实现
----------
-
-非受控组件方式实现时，子表单BaseForm和DetailForm都有一个名为defaultValue的属性，用来接受表单的初始化数据，而一旦初始化完成，子表单数据不再受控，可以在validate方法通过后拿到表单的最新数据。
-
-我们先看下主表单的实现逻辑：
-
-    <template>
-      <div>
-          <BaseForm ref="baseForm" :defaultValue="formData.baseInfo"/>
-          <DetailForm ref="detailForm" :defaultValue="formData.detail"/>
-          <el-button @click="submit">提交</el-button>
-      </div>
-    </template>
-    
-    <script>
-    import BaseForm from "@/components/big-form/BaseForm";
-    import DetailForm from "@/components/big-form/DetailForm";
-    export default {
-      name: 'BigForm',
-        components: {
-            BaseForm,
-            DetailForm
-        },
-        data(){
-          return {
-              formData: {
-                  baseInfo: {
-                      name: ''
-                  },
-                  detail: {
-                      description: ''
-                  }
-              }
-          }
-        },
-        methods:{
-            submit(){
-                Promise.all([
-                    this.$refs.baseForm.validate(),
-                    this.$refs.detailForm.validate()
-                ]).then(([baseFormData, detailFormData]) =>{
-                    //拿到表单的最新数据
-                    console.log(baseFormData, detailFormData)
-                }).catch(error=>{
-                    console.log(error)
+            emitSearch(){
+                this.$emit('search', {
+                    name: this.name, 
+                    phone: this.phone
                 })
             }
         }
@@ -609,98 +220,134 @@
     </script>
     
 
-每个子表单都提供一个validate方法，该方法最好返回Promise，这样我们可以利用Promise.all来判断全部子表单是否均校验通过。validate方法在子表单校验成功后最好将表单最新数据返回，这样就不需要额外再提供一个获取子表单最新数据的方法了。
+由于UserSearch这个组件是针对这个具体业务场景抽取的，没有经过抽象，所以只能用在用户列表搜索这个特定的场景，复用性很差。如果你后续开发产品列表，你可能又要创建一个名为ProductSearch的组件，每次都要重新开发。
 
-以BaseForm为例，看看子表单的非受控方式实现：
+而如果我们站在项目的角度去考虑呢？搜索是我们各个列表页都需要的功能，观察不同列表的搜索功能，我们会发现他们有一些共同特点：右侧都有个搜索按钮，左侧是一块表单区域但是表单内容不固定，点击搜索按钮时会通知列表根据表单输入内容进行数据查询。基于此我们可以抽象出一个通用的搜索组件SearchForm，由于表单内容不固定，我们可以对外暴露一个属性，如fields，用来配置左侧有哪些表单项，包括每个表单的名称、类型以及属性，在点击搜索按钮后对外抛出search事件，这样几乎每个页面都可以复用这个组件，只要配置不同的fields即可。
 
     <template>
-    <div>
-        <div>基础信息</div>
-        <el-form ref="form" :model="formData" :rules="rules">
-            <el-form-item prop="name" label="姓名">
-                <el-input v-model="formData.name" />
-            </el-form-item>
-        </el-form>
-    </div>
+        <SearchForm
+            :fields="fields"
+            @search="search"
+        />
     </template>
-    
     <script>
     export default {
-        name: "BaseForm",
-        props: {
-            defaultValue: {
-                type: Object,
-                defaultValue: ()=> ({})
-            }
-        },
         data(){
             return {
-                //初始化表单数据
-                formData: {...this.defaultValue},
-                rules:{
-                    name: [{required: true, message: '姓名不能为空'}]
-                }
+                fields:[
+                    {
+                        key: 'name',
+                        label:'姓名',
+                        component: 'input',
+                        props:{
+                            placeholder: '输入姓名筛选'
+                        }
+                    },
+                    {
+                        key: 'phone',
+                        label:'手机',
+                        component: 'input',
+                        props:{
+                            placeholder: '输入手机号筛选'
+                        }
+                    }
+                ]
             }
         },
         methods:{
-            validate(){
-                return this.$refs.form.validate().then(_=>{
-                    //校验成功后返回表单最新数据
-                    return this.formData;
-                })
+            search(data){
+                //刷新表格
             }
         }
-    
-    };
+    }
     </script>
     
 
-其中主要关注两个地方：formData的初始化和validate方法。由于是非受控组件，只进行一次数据初始化，后续自行维护表单数据，直到被主表单调用validate方法后，才将最新数据传递给主表单。
+这个SearchForm怎么实现大家可以先自行思考，后面实战环节会详细介绍如何实现该组件。怎么实现其实并不是最关键的，大多时候只要一个组件需求明确，我们都可以实现它，而关键是，当没有人给你提出技术需求时，你能不能通过抽象思维自行提炼出这样的公共组件设计。
 
-采用非受控方式开发子表单非常简单，缺点就是主表单不能及时获取每个子表单的最新数据，一旦其他子表单需要共享数据，就比较麻烦。
+抽象能力是我们编程时要具备的一项核心能力，在开发组件时，可以多去试着站在系统的角度看问题，进行更高维度的抽象。
 
-受控组件方式实现
---------
+*   **单一职责**
 
-受控组件方式，子表单BaseForm和DetailForm支持属性value和onChange事件，在Vue中支持v-model双向绑定，这样主表单可以实时获取子表单数据，表单多个表单之间互动，也无需像非受控组件那样，在validate方法中返回子表单最新数据。
+组件就像积木，通过各种组合，组成更大的功能模块或页面，越是功能单一的积木用途就越广，越是复杂的多功能积木用途就越窄，组件也是一样的道理。就像ElementUI中的那些组件一样，每个组件功能都很单一，比如icon、button、input等，越是这种功能很小很单一的组件，越是能通过组合发挥出更大的威力，适用于各种功能、各种页面、各种行业。
 
-主表单实现如下：
+![06-组件单一职责增强复用性.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/240d787d1338478587fdd70f217613a4~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=622&h=527&s=77123&e=png&b=fefefe)
+
+所以在封装组件时，尽可能满足单一职责原则，特别是一些通用组件和项目基础组件，更是要遵循这个原则，对于业务领域组件来说，虽然功能相对复杂一些，但是也尽量一个组件只完成一件业务功能，这样能大大提升组件的复用性。
+
+### 扩展性
+
+通过抽象，虽然可以应对绝大部分场景，但是难免会有一些特殊需求，这时就要靠组件的扩展性来满足用户需要了。组件本身由DOM、逻辑和样式组成，所以要提升组件扩展性我们也需要从三个方面去考虑，即如何扩展DOM，如何扩展逻辑以及如何扩展样式，解决了这三个问题基本就解决了组件的扩展性。
+
+> 扩展组件 = 扩展DOM + 扩展逻辑 + 扩展样式
+
+*   **扩展DOM**
+
+插槽是提升组件DOM扩展性的一个重要方法，通过插槽我们可以扩展组件的DOM结构，而不必去修改组件本身，这也符合软件开发的开闭原则，即对扩展开放，对修改关闭。
+
+在ElementUI组件中大部分组件都提供了插槽，比如input组件就提供了4个插槽。
+
+![06-input插槽.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/a3233e29d8224aa28036609266915fda~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=664&h=281&s=19077&e=png&b=ffffff)
+
+虽然插槽很简单，但是实际开发中很多人未必想到去用，比如现在有一个表单中的标题组件FormTitle，如下图所示，每个标题前面有个绿色的竖线。
+
+![05-表单标题1.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/f5cf6c1febf6464a890dac6d72bdb998~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=493&h=166&s=11499&e=png&b=fefefe)
+
+大部分情况表单标题都是上面这种样式的，但是在添加用户的表单标题上有个提示图标或者按钮，如下图这样。
+
+![05-表单标题2.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/64c17ec589be435b864cd1611732035a~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=407&h=146&s=17558&e=png&b=fefefe)
+
+这时候，就会有一些同学这样做：既然是添加用户的表单出现这种情况，那我给组件加一个属性，告诉组件当前是在添加用户页面，组件内部根据这个属性来修改DOM。
+
+这样做虽然解决了这个问题，但是却非常不合理，因为我们这个组件叫FormTitle，而不是UserFormTitle，显然它是一个非常通用的组件，通用组件不应该耦合业务逻辑，所以最好的方式还是提供一个插槽，业务模块有特殊需求时就使用插槽去扩展。
+
+值得一提的是，在使用插槽时，记得给插槽一个合适的默认值，而不是每个使用组件的地方都必须要配置插槽，注意组件的易用性。
+
+*   **扩展逻辑：钩子函数**
+
+插槽给予我们扩展UI的机会，而如果想要扩展逻辑，则需要提供一些钩子函数。
+
+假如我们开发这样一个CommonTable组件，希望它能够自动请求数据，然后以表格形式渲染出来，为了实现这个功能我们可能这么设计，传递给CommonTable组件一个API地址。
+
+    <CommonTable api="/api/v1/user"/>
+    
+
+很明显这里的API要遵循同一套规范，比如能够支持按照pageNumber和pageSize的筛选，返回数据也必须按照固定的格式，如果所有的API都是企业内部的还好，一旦涉及外部API接口，这个组件可能就不适用了，人家返回的数据格式和规范肯定不相符。
+
+我们可以这样进行扩展，为组件增加一个parseData钩子函数，每次请求API数据之后，调用parseData进行数据转换，这样就能将不符合规范的第三方接口返回值修改为满足组件要求的格式。
 
     <template>
-      <div id="app">
-          <BaseForm ref="baseForm" v-model="formData"/>
-          <DetailForm ref="detailForm" v-model="formData"/>
-          <el-button @click="submit">提交</el-button>
-      </div>
+        <CommonTable api="/other-api/user" :parseData="parseData" />
     </template>
-    
     <script>
-    import BaseForm from "@/components/big-form/BaseForm";
-    import DetailForm from "@/components/big-form/DetailForm";
     export default {
-      name: 'App',
-        components: {
-            BaseForm,
-            DetailForm
-        },
-        data(){
-          return {
-              formData: {
-                  name: '',
-                  description: ''
-              }
-          }
-        },
         methods:{
-            submit(){
-                Promise.all([
-                    this.$refs.baseForm.validate(),
-                    this.$refs.detailForm.validate()
-                ]).then(_ =>{
-                    //主表单中的formData就是表单最新数据
-                    console.log('this.formData', this.formData)
-                }).catch(error=>{
-                    console.log(error)
+            parseData(data){
+                //对数据格式进行处理
+                return data;
+            }
+        }
+    }
+    </script>
+    
+
+上面这个扩展方式还有局限性，如果第三方接口不支持表格传递过来的pageNumber和pageSize参数，那么请求到的数据就不正确了，为此我们可以让api属性支持两种格式：字符串和函数，如果是字符串，则认为是个接口地址，如果是函数则直接调用这个函数进行数据请求。
+
+    <template>
+        <CommonTable :api="getData" />
+    </template>
+    <script>
+    export default {
+        methods:{
+            getData(pageNumber, pageSize){
+                return request('/other/user',{
+                    params:{
+                        num: pageNumber,
+                        size: pageSize
+                    }
+                }).then(data=>{
+                    //数据处理
+                    return data
                 })
             }
         }
@@ -708,93 +355,42 @@
     </script>
     
 
-子表单实现的难点是如何在任意一个表单项数据发生变更后，通过change事件将子表单最新数据抛出去，如果给每个表单项增加事件监控则会显得非常繁琐。这里我们可以增加一个计算属性formData赋给表单的model属性，计算属性formData采用get和set方式实现，当获取formData数据时，就返回子表单的属性value，而当表单的model发生变化时，则通过set方法，将change事件抛出去。
+这样无论什么样的接口，组件都可以灵活应对了，通过钩子函数的方式让我们能够扩展组件的内部逻辑，而不需要修改组件的原有代码。
 
+*   **扩展样式：自定义样式**
+
+除了扩展DOM、逻辑之外，组件通常还需要支持扩展样式，要能够给用户修改样式的机会，比如能够接收用户传递过来的style或class。
+
+以ElementUI的Popover组件为例，可通过popover-class属性设置弹窗内容的类名。
+
+![06-popover自定义样式.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9d47cce1f23a44b6ba54144ade3d7ace~tplv-k3u1fbpfcp-jj-mark:1600:0:0:0:q75.jpg#?w=411&h=86&s=5516&e=png&b=ffffff)
+
+另外还需要注意一点，在组件内部尽量不要通过 !important去设置样式，特别是一些基础组件，要留给用户修改样式的机会，建议通过CSS优先级去设置样式。
+
+### 易用性
+
+通用性解决了能不用的问题，而易用性解决了好不好用的问题，特别是对一些新手来说，易用性则是他们更加关注的。
+
+*   **傻瓜式使用**
+
+我之前做过一个开源项目： [vue-office](https://github.com/501351981/vue-office "https://github.com/501351981/vue-office") ，用来解决docx、xlsx、pdf文件的预览，之所以开发这个组件，就是因为我看到同事为了实现文件的预览要写大量的代码，而我认为预览一个文件应该极其简单，只要传递文件地址即可实现文件预览，为此我开发了这样一个组件库，刚上线几个月即收获了1K+ star，虽然我并没有实现多么高深的底层预览库，只是站在巨人的肩膀上进行了一层简单封装，但是由于大大简化了使用方式，提供了一整套预览方案，大大增强了易用性，对新手来说更加友好，由此也获得了大家的认可。
+
+    <!--使用vue-office进行docx预览-->
     <template>
-    <div>
-        <div>基础信息</div>
-        <el-form ref="form" :model="formData" :rules="rules">
-            <el-form-item prop="name" label="姓名">
-                <el-input v-model="formData.name" />
-            </el-form-item>
-        </el-form>
-    </div>
+      <vue-office-docx src="**.docx"/>
     </template>
     
-    <script>
-    export default {
-        name: "BaseForm",
-        model: {
-          //默认的是input事件，为了遵循受控组件的规范，我们改为change事件
-          event: 'change'
-        },
-        props: {
-            value: {
-                type: Object,
-                defaultValue: ()=> ({})
-            }
-        },
-        data(){
-            return {
-                rules:{
-                    name: [{required: true, message: '姓名不能为空'}]
-                }
-            }
-        },
-        computed: {
-            formData:{
-                get(){
-                    return this.value
-                },
-                set(val){
-                    this.$emit('change', val)
-                }
-            }
-        },
-        methods:{
-            validate(){
-                return this.$refs.form.validate();
-            }
-        }
-    
-    };
-    </script>
-    
 
-> 为了实现双向绑定v-model，并遵循受控组件的规范，我们增加model的配置，将event设为 "change"，默认是"input"
+*   **减少配置，默认值满足大部分需求**
 
-无论是受控组件方式还是非受控组件方式，都能将复杂表单拆分成多个简单的小表单，并无本质区别，只是受控组件方式的主表单可以一直获取最新且完整的表单数据，而非受控组件则会推迟到全部子表单校验成功后；不过非受控组件的开发逻辑相对简单点，各有优势，可以根据是否需要子表单互动来决定使用哪一种。
+为了应对各种场景，组件可能会有很多属性，但即使不配置任何属性，或者仅需配置1-2个属性，组件就应该能满足80%以上的使用场景，这就要求在开发组件时，分析各种场景出现的频率，为每个属性设置合理的默认值。
 
-总结
-==
+*   **符合用户习惯**
 
-本节我们介绍了表单组件的两种重要范式：受控组件和非受控组件。只要开发表单项组件，就要符合这两种范式的规范要求：
+组件的属性、事件和插槽名应该符合用户的使用习惯，尽量不增加用户的心智负担。
 
-*   受控组件：支持属性value和事件onChange
-*   非受控组件：支持属性defaultValue和getValue方法
+比如我们要开发一个新增用户弹窗组件，作为弹窗应该有个属性来控制弹窗的显隐，那么这个属性叫什么呢？hide、show、open还是visible？如果你们的项目都在使用ElementUI组件库，那么显然visible是最佳选择，因为在ElementUI中dialog的显隐就是通过属性visible控制的，所以当用户看到dialog弹窗，就自然而然地想到用visible属性来控制弹窗显隐，没有任何记忆负担，相反，如果你在属性/方法命名时比较随意，别人为了使用你的组件，还必须要记住每个组件的属性，那太痛苦了。
 
-建议平时以开发受控组件为主，以简化表单项组件的使用(v-model)。
+组件的每个属性命名都值得反复斟酌，尽量给人一种"就应该那样"或者"和我想的一样"的自然而然的感觉，所以高手在用其他高手写的组件时，往往不用看手册就能猜出来怎么使用，而新手总是那么让人"意想不到"。
 
-表单开发中常见的问题及解决方案：
-
-问题
-
-解决方案
-
-充满细节
-
-将表单项提取为组件
-
-繁琐的Dom
-
-通过配置驱动表单生成，可以使用配置表单
-
-表单封装不规范
-
-遵守受控组件和非受控组件的开发要求
-
-表单校验不统一
-
-提取常用校验规则到常量中
-
-针对业务开发中的复杂表单问题，可以利用分治思想，将复杂表单拆分成多个简单小表单，每个小表单遵循受控组件和非受控组件规范，并额外提供一个validate方法。
+> 如何提升组件的可读性和正交性，以及组件开发应该遵循怎样的流程，我们放到下节再说。
