--- a/JavaScript/13.DOM扩展.md
+++ b/JavaScript/13.DOM扩展.md
@@ -40,7 +40,7 @@ IE即移动浏览器需要带前缀
 
 #### `getElementByClassName()`
 
-`getElementByClassName()`接收一个参数（包含一个或多个类名的字符串），返回类名中匹配的元素的`NodeList`
+`getElementByClassName()`接收一个参数（包含一个或多个类名的字符串），返回类名中匹配的元素的`HTMLCollection`
 
 ```js
 // 取得所有类名中包含username和current的元素
@@ -62,7 +62,7 @@ let allCurrentUsernames = document.getElementByClassName('username current')
 
 `document.activeElement`包含当前拥有焦点的DOM元素，用户可通过tab键或focus方法让某个元素自动获取焦点
 
-页面加载完成之后，默认值为`document.body`
+页面加载之前值为null，页面加载完成之后，默认值为`document.body`
 
 `document.hasFocus()`可检测文档是否拥有焦点
 
@@ -73,7 +73,8 @@ let allCurrentUsernames = document.getElementByClassName('username current')
 `document.readyState`属性有两个可能的值：
 
 - loading：表示文档正在加载
-- complete：表示文档加载完成
+- interactive：表示文档加载完成，但是子资源还在加载
+- complete：表示文档和子资源加载完成
 
 ```js
 if(document.readyState=='complete'){
@@ -142,8 +143,18 @@ IE和Opera的返回值会把元素标签转为大写，Safari、chrome和Firefox
 - `afterend`：插入当前元素的后面，作为下一个同胞节点
 
 ```js
-element.insertAdjacentHTML('beforebegin','<p>hello world</p>')
-element.insertAdjacentText('beforebegin','hello world')
+// 作为前一个同胞节点插入
+element.insertAdjacentHTML("beforebegin", "<p>Hello world!</p>"); 
+element.insertAdjacentText("beforebegin", "Hello world!"); 
+// 作为第一个子节点插入
+element.insertAdjacentHTML("afterbegin", "<p>Hello world!</p>"); 
+element.insertAdjacentText("afterbegin", "Hello world!"); 
+// 作为最后一个子节点插入
+element.insertAdjacentHTML("beforeend", "<p>Hello world!</p>"); 
+element.insertAdjacentText("beforeend", "Hello world!"); 
+// 作为下一个同胞节点插入
+element.insertAdjacentHTML("afterend", "<p>Hello world!</p>");
+element.insertAdjacentText("afterend", "Hello world!"); 
 ```
 
 #### 内存和性能问题
